--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,12 @@ body {
 }
 
 header {
-    min-height: 450px;
-    height: 450px;
+    width: 100%;
     background-image: url("/images/banner-bg.jpg");
     background-color: #000000;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .header-mask {
@@ -50,16 +50,15 @@ header {
 
 .menu-container {
     display: flex;
-    width: 100%;
+    max-width: 1170px;
+    flex-basis: 1170px;
+    margin-top: 28px;
     justify-content: space-between;
+    align-items: center;
 }
 
 .logo {
-    display: flex;
     max-width: 179px;
-    height: 41px;
-    margin-top: 29px;
-    margin-left: 18px;
 }
 
 .menu-list {
@@ -67,17 +66,20 @@ header {
     flex-wrap: wrap;
     list-style-type: none;
     padding-left: 0;
-    margin-top: 46px;
     font-weight: regular;
     font-size: 13px;
 }
 
-.menu-list__item-first {
-    margin-left: 0;
+.menu-icon {
+    display: none;
 }
 
 .menu-list__item {
     margin-left: 35px;
+}
+
+.menu-list__item-first {
+    margin-left: 0;
 }
 
 .menu-list__item-link {
@@ -97,12 +99,13 @@ header {
     font-size: 45px;
     text-align: center;
     line-height: 75px;
+    margin: 105px 0 125px 0;
 }
 
 .trends {
     display: flex;
     width: 100%;
-    margin-top: 42px;
+    margin-top: 59px;
     flex-wrap: wrap;
     font-weight: bold;
     text-transform: uppercase;
@@ -118,7 +121,7 @@ header {
 
 .trends-header__title {
     font-size: 20px;
-    margin-bottom: 10px;
+    margin: 0;
 }
 
 .trends-header__title::after {
@@ -131,15 +134,14 @@ header {
 
 .trends-list {
     display: flex;
+    justify-content: space-between;
     width: 100%;
-    height: 320px;
-    margin: 0;
 }
 
 .trend {
     display: flex;
     width: 25%;
-    height: 320px;
+    min-height: 320px;
     margin-left: 4px;
     box-sizing: border-box;
 }
@@ -229,7 +231,6 @@ header {
     margin-top: 64px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 15px;
     justify-content: space-between;
 }
 
@@ -246,7 +247,7 @@ header {
 }
 
 .post-first {
-    margin: 0;
+    margin: 0 !important;
 }
 
 .post__image {
@@ -279,7 +280,7 @@ header {
 }
 
 .post-info {
-    margin-top: -6px;
+    margin-top: -20px;
 }
 
 .post-info__title {
@@ -287,7 +288,7 @@ header {
     font-weight: bold;
     text-transform: uppercase;
     line-height: 24px;
-    margin-top: 10px;
+    margin-top: -6px;
     margin-bottom: 27px;
 }
 
@@ -344,7 +345,7 @@ header {
 }
 
 .new-posts__title {
-    margin-top: 0;
+    margin-top: 3px;
     margin-bottom: 14px;
     font-size: 14px;
     font-weight: bold;
@@ -390,7 +391,7 @@ header {
 }
 
 .post-short-info__title {
-    margin-top: 8px;
+    margin-top: 5px;
     margin-bottom: 0;
     font-size: 14px;
     font-weight: bold;
@@ -656,7 +657,6 @@ header {
 .products {
     max-width: 1170px;
     margin-top: 46px;
-    padding: 0 15px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -706,9 +706,9 @@ header {
     flex-direction: column;
     margin-top: -30px;
     max-width: 347px;
-    height: 267px;
+    min-height: 267px;
     box-sizing: border-box;
-    padding: 50px 23px 0 23px;
+    padding: 50px 23px 23px 23px;
     outline: 3px solid #b59f5b;
 }
 
@@ -761,6 +761,7 @@ header {
 }
 
 .product-price__btn {
+    display: flex;
     max-width: 140px;
     height: 48px;
     width: 100%;
@@ -770,6 +771,9 @@ header {
     font-weight: bold;
     color: #ffffff;
     text-transform: uppercase;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 }
 
 .product-price__btn:hover {
@@ -819,12 +823,304 @@ footer {
 }
 
 .copyright {
-    max-height: 130px;
-    height: 130px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: 59px 0 59px 0;
     font-size: 12px;
     font-weight: bold;
     color: #999999;
+    text-decoration: none;
+}
+
+@media (max-width: 1200px) {
+    .menu-list {
+        display: none;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .post::before {
+        content: '';
+        border-bottom: 2px solid #eee;
+    }
+
+    .post-first::before {
+        border: none;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 1200px) {
+    header {
+        background-image: url("/images/banner-bg-tablet.jpg");
+    }
+
+    .header-content {
+        max-width: 698px;
+    }
+
+    .menu-container {
+        margin-top: 46px;
+    }
+
+    .logo {
+        max-width: 158px;
+    }
+
+    .header__title {
+        font-size: 40px;
+        max-width: 603px;
+        margin: 91px 0 108px 0;
+        line-height: 55px;
+    }
+
+    .trends-header__title {
+        font-size: 18px;
+    }
+
+    .trends {
+        margin-top: 46px;
+    }
+
+    .trend {
+        width: 49.8%;
+        margin-left: 0;
+    }
+
+    .trend:nth-child(n + 3) {
+        margin-top: 2px;
+    }
+
+    .trends-list {
+        flex-wrap: wrap;
+    }
+
+    .trend-info__title {
+        font-size: 17px;
+    }
+
+    .general-content {
+        max-width: 698px;
+    }
+
+    .post {
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .post::before {
+        margin-bottom: 42px;
+    }
+
+    .posts-main {
+        max-width: 392px;
+    }
+
+    .post-info {
+        margin-top: 16px;
+    }
+
+    .post-info__title {
+        font-size: 17px;
+        line-height: 22px;
+    }
+
+    .post__image {
+        margin-right: 0;
+        max-width: 392px;
+    }
+
+    .product {
+        max-width: 337px;
+    }
+
+    .product:nth-child(n + 3) {
+        margin-top: 28px;
+    }
+
+    .products__title {
+        font-size: 18px;
+    }
+
+    .products {
+        max-width: 698px;
+    }
+
+    .product-info {
+        padding: 50px 20px 20px 20px;
+    }
+
+    .product-info__title {
+        font-size: 17px;
+    }
+
+    .product-info__description {
+        font-size: 15px;
+    }
+
+    .socials {
+        max-width: 698px;
+    }
+}
+
+@media (max-width: 691px) {
+    .products-wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 640px) {
+    header {
+        background-image: url("/images/banner-mobile.jpg");
+    }
+
+    .header-content {
+        max-width: 330px;
+    }
+
+    .menu-container {
+        flex-direction: column-reverse;
+        align-items: end;
+        margin-top: 32px;
+    }
+
+    .logo {
+        max-width: 269px;
+        margin-left: auto;
+        margin-right: auto;
+        margin: 174px auto 0 auto;
+    }
+
+    .header__title {
+        font-size: 26px;
+        max-width: 603px;
+        margin: 34px 0 210px 0;
+        line-height: 36px;
+    }
+
+    .trends-header__title {
+        font-size: 16px;
+    }
+
+    .trends {
+        margin-top: 40px;
+    }
+
+    .trend {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .trend:nth-child(n + 2) {
+        margin-top: 3px;
+    }
+
+    .trends-list {
+        flex-direction: column;
+    }
+
+    .trend-info {
+        padding-left: 23px;
+        padding-right: 23px;
+        margin: 15px;
+    }
+
+    .trend-info__title {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .general-content {
+        flex-direction: column;
+        align-items: center;
+        max-width: 330px;
+        margin: 44px auto 0 auto;
+    }
+
+    .post {
+        flex-direction: column;
+        margin-top: 25px;
+    }
+
+    .post::before {
+        margin-bottom: 35px;
+    }
+
+    .post-info {
+        margin-top: 1px;
+    }
+
+    .post-info__title {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .post__image {
+        margin-right: 0;
+        max-width: 100%;
+    }
+
+    .date-and-author {
+        margin-bottom: 20px;
+    }
+
+    .post-last::after {
+        content: '';
+        border-bottom: 2px solid #eee;
+        margin-bottom: 44px;
+        margin-top: 24px;
+    }
+
+    .new-posts__title {
+        font-size: 16px;
+    }
+
+    .subscription__title{
+        font-size: 16px;
+    }
+
+    .tags__title {
+        font-size: 16px;
+    }
+
+    .themes__title {
+        font-size: 16px;
+    }
+
+    .products {
+        margin-top: 28px;
+    }
+
+    .product {
+        max-width: 330px;
+    }
+
+    .product:nth-child(n + 2) {
+        margin-top: 27px;
+    }
+
+    .product-info {
+        padding: 50px 15px 15px 15px;
+        min-height: 0;
+    }
+
+    .products__title {
+        font-size: 16px;
+    }
+
+    .products {
+        max-width: 330px;
+    }
+
+    .product-info__title {
+        font-size: 17px;
+    }
+
+    .product-info__description {
+        font-size: 15px;
+    }
+
+    .socials {
+        max-width: 330px;
+    }
 }
